# swe-bench-taskgen

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  repo_overrides.yaml  run_pipeline.sh  setup.sh
pr-to-swe-task-jsonl/: README.md  example_pr_urls.txt  pyproject.toml  repo_overrides.yaml  requirements.txt
pr-to-swe-task-jsonl/prompts/: create_test_patch_from_pr.txt  fix_install_recipe.txt  fix_test_patch_from_tests.txt  list_install_files.txt  refine_install_recipe.txt
pr-to-swe-task-jsonl/swe_rebench_pr/: __init__.py  c_harness_router.py  ci_extract.py  cli.py  diff_split.py  django_runtests.py  docker_entry.py  env_config.py  env_setup.py  gh_pr.py  go_build.py  harness_guards.py  install_config_build.py  issues.py  java_build.py  llm_client.py  manifest_extract.py  patch_paths.py  patch_sanitize.py  runtests_build.py  runtime_deps.py  rust_build.py  swebench_align.py  test_patch_llm.py  versioning.py
pr-to-swe-task-jsonl/tests/: test___tests___paths.py  test_apt_from_log.py  test_c_build.py  test_ci_extract.py  test_ci_fidelity.py  test_ci_install_normalize.py  test_discovery_routing.py  test_django_install.py  test_django_log_keys.py  test_docker_discover_install_failed.py  test_f2p_p2p_compute.py  test_gh_pr_base_commit.py  test_go_build.py  test_harness_gates.py  test_harness_repo_scripts.py  test_harvest_jest_junit.py  test_java_build.py  test_java_junit_path_match.py  test_languages.py  test_mocha_junit_path_match.py  test_native_integration_junit_path_match.py  test_patch_paths.py  test_patch_sanitize.py  test_patch_validate.py  (+12 more)
(+213 files in other folders)
